# smart_organizer

./: .coverage  .coverage.DESKTOP-H5PM7JT.pid11852.XOcq3K5x.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid14544.X5sBRnux.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid14544.XNih57Fx.Ha8McuGmirZh  .coverage.DESKTOP-H5PM7JT.pid20736.XQLYdbsx.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid20948.XPErH1vx.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid25004.XChhgf7x.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid25512.XTRr1GHx.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid26284.XWYMzEOx.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid26284.XpMLZs3x.H4uMxmpJQSCh  .coverage.DESKTOP-H5PM7JT.pid3032.XV2A4x0x.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid30544.XNTwgoTx.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid31836.X34yesox.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid31836.XMzo4t2x.HhL8hKD0AZ9h  .coverage.DESKTOP-H5PM7JT.pid4956.XN8e0ADx.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid4956.Xi7tCK4x.HNQIp837rWOh  .coverage.DESKTOP-H5PM7JT.pid6452.X9qdqpXx.HNQIp837rWOh  .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  README.md  README.zh-TW.md  RELEASE_PACKAGING.md  RUN_RELEASE.md  app.py  app.pyc.1916334321504  app_main.py  app_main.pyc.1916334321504  async_processor.py  async_processor.pyc.1916337466960  compileall.py  compileall.pyc.1916337427344  config.py  contracts.py  contracts.pyc.1916337427344  core.py  core.pyc.1916334798720  core_classification.py  core_classification.pyc.1916332323344  (+77 more)
.github/: dependabot.yml
.streamlit/: config.toml
docs/: KNOWN_LIMITATIONS.md  PORTFOLIO_CASE_STUDY.md  (+2 more)
(+117 files in other folders)
