[project]
name = "smart-organizer"
version = "2.8.5rc3"
requires-python = ">=3.11,<3.13"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".pytest_cache",
  "__pycache__",
  "release",
  "release_ci*",
]

[tool.ruff.lint]
select = ["F", "E9", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
incremental = false
exclude = '(^|[\\/])(\.git|\.venv|\.pytest_cache|__pycache__|release|release_ci[^\\/]*|uploads|repo|tests([\\/]_tmp_pytest)?)([\\/]|$)'
files = ["."]

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false

